[package]
name = "pom-preview"
version = "3.0.4.alpha.1"
edition = "2018"
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>", "Jovansonlee Cesar <ivanceras@gmail.com"]
homepage = "https://github.com/ivanceras/pom-preview"
documentation = "https://docs.rs/crate/pom-preview/"
repository = "https://github.com/ivanceras/pom-preview.git"
license = "MIT"
readme = "README.md"
description = "PEG parser combinators using operator overloading without macros."
categories = ["parsing"]
keywords = ["parser", "parser-combinators", "parsing", "PEG"]

[lib]
name = "pom"

